syntax = "proto3";

option csharp_namespace = "AsunaServer.Message";

message InnerPingReq 
{
  string ServerName = 1;
}

message InnerPongRsp
{
  string ServerName = 1;
}

message ServerReadyNtf
{
  string ServerName = 1;
}

message StubsDistributeNtf
{
  map<string, string> StubsDistributeTable = 1;
}

message StubReadyNtf
{
  string StubName = 1;
}

message OpenGateNtf
{
  map<string, string> StubsDistributeTable = 1;
}

message RpcNtf
{
  optional string StubName = 1;
  optional uint64 Guid = 2;
  uint32 Method = 3;
  uint32 ArgsCount = 4;
  repeated uint32 ArgsTypeIndex = 5;
  repeated bytes Args = 6;
}




